first implementation of the api

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../static/home.css" rel="stylesheet" type="text/css" />
     <title>python trade</title>
 </head>
 <body>
-    <h1>¡Hola desde Flask!</h1>
+    <header>
+        <h1>CREA UNA CUENTA O INICIA SESION</h1>
+    </header>
+    <main>
+        <div>
+            <a href="/login.html">INICIA SESION</a>
+            <a href="/register.html">CREAR CUENTA</a>
+            <button>MIRON</button>
+        </div>
+    </main>
+    <footer>Hector Yahir Sanchez Martinez</footer>
 </body>
-<footer>Hector Yahir Sanchez Martinez</footer>
 </html>
