added functionality in html pages

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,12 +7,13 @@
 </head>
 <body>
     <header>
-
+        <h1>BIENVENIDO, PRODUCTOS DISPONIBLES: </h1>
     </header>
     <body>
-        <div>
+        <div id="home_products">
             
         </div>
+        <button id="btn_user_to_seller">CONVERTIRME EN VENDEDOR</button>
     </body>
 </body>
 </html>
