--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     <h1>LOGIN</h1>
-    <form>
-        <label>INGRESA TU CORREO</label><br/>
-        <input type="text" id="input_email" name="email"/><br/>
+        <button id="btn_generate_seller_login">SOY VENDEDOR</button>
+        <button id="btn_generate_user_login">USUARIO</button>
 
-        <label>INGRESA TU CONTRASEÑA</label><br/>
-        <input type="text" id="input_password" name="password"/><br/>
+    <div id="login_usr">
 
-        <a id="btn_login">INGRESAR</a>
-    </form>
+    </div>    
+    
+    <div id="login_seller">
 
+    </div>
     <script src="../static/js/login.js"></script>
 </body>
 </html>
