--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -19,7 +19,7 @@
         <label for="input_password">Contraseña:</label>
         <input type="password" id="input_password" name="password" />
 
-        <a id="btn_register">REGISTRO</a>
+        <button id="btn_register">REGISTRO</button>
     </form>
 
     <script src="../static/js/register.js"></script>
