--- a/app/static/css/home_seller.css
+++ b/app/static/css/home_seller.css
@@ -1,4 +1,4 @@
-#form_modal {
+#form_modal_product {
     display: none; 
     position: fixed;
     top: 0;
@@ -12,7 +12,7 @@
     align-items: center;
 }
 
-#form_content {
+#form_content_product {
     background-color: white;
     padding: 20px;
     border-radius: 10px;
@@ -21,14 +21,26 @@
     width: 300px;
 }
 
-#form_content input {
+#form_content_product input {
     margin: 10px 0;
     width: 90%;
     padding: 10px;
 }
 
-#form_content button {
+#form_content_product button {
     margin-top: 10px;
     padding: 10px 20px;
     cursor: pointer;
+}
+
+#product-card {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+#product-card h3 {
+    margin: 0 0 10px;
 }
