first db implementation in the class models, and in the registry endpoint

--- a/app/templates/home_seller.html
+++ b/app/templates/home_seller.html
@@ -37,6 +37,7 @@
         <div id="seller_products">
 
         </div>
+        <button id="btn_close_seller_sesion">CERRAR SESION</button>
     </body>
     <script src="../static/js/home_seller.js"></script>
 </body>
