endpoint upgrade to convert user to seller

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,7 +22,7 @@
             <input type="text" id="seller_name" placeholder="Tu nombre">
             
             <label for="seller_email">Correo:</label>
-            <input type="email" id="seller_email" placeholder="Tu correo">
+            <input type="email" id="seller_email" placeholder="Tu correo" disabled>
             
             <label for="seller_phone">Teléfono:</label>
             <input type="text" id="seller_phone" placeholder="Tu teléfono">
