the seller can now delete a product

--- a/app/templates/home_seller.html
+++ b/app/templates/home_seller.html
@@ -39,6 +39,6 @@
         </div>
         <button id="btn_close_seller_sesion">CERRAR SESION</button>
     </body>
-    <script src="../static/js/home_seller.js"></script>
+    <script src="../static/js/sellers/home_seller.js" type="module"></script>
 </body>
 </html>
