--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -17,6 +17,6 @@
     <div id="login_seller">
 
     </div>
-    <script src="../static/js/login.js"></script>
+    <script src="../static/js/users/login.js"></script>
 </body>
 </html>
