--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -35,6 +35,6 @@
         </div>
     </div>
 
-    <script src="../static/js/home.js"></script>
+    <script src="../static/js/users/home.js"></script>
 </body>
 </html>
