--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -22,6 +22,6 @@
         <button id="btn_register">REGISTRO</button>
     </form>
 
-    <script src="../static/js/register.js"></script>
+    <script src="../static/js/users/register.js"></script>
 </body>
 </html>
