user can now see all available products on the home page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,6 +14,7 @@
         
     </div>
     <button id="btn_user_to_seller">CONVERTIRME EN VENDEDOR</button>
+    <button id="btn_close_sesion">cerrar sesion</button>
 
     <div id="form_modal">
         <div id="form_content">
