the user can now add products to his cart

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,6 +13,9 @@
     <div id="home_products">
         
     </div>
+    <div id="cart_items">
+
+    </div>
     <button id="btn_user_to_seller">CONVERTIRME EN VENDEDOR</button>
     <button id="btn_close_sesion">cerrar sesion</button>
 
