--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,16 +8,21 @@
 </head>
 <body>
     <header>
-        <h1>BIENVENIDO, PRODUCTOS DISPONIBLES: </h1>
+        <div id="header-container">
+            <h1>PRODUCTOS DISPONIBLES</h1>
+        <div id="header-btn-container">
+            <button id="btn_user_to_seller">CONVERTIRME EN VENDEDOR</button>
+            <button id="btn_close_sesion">Cerrar Sesión</button>
+        </div>
+        </div>
     </header>
-    <div id="home_products">
-        
+    <div id="home_container">
+        <div id="home_products"></div>
+        <div id="cart_items">
+            <h2>Tu Carrito</h2>
+            <div id="cart_content"></div>
+        </div>
     </div>
-    <div id="cart_items">
-
-    </div>
-    <button id="btn_user_to_seller">CONVERTIRME EN VENDEDOR</button>
-    <button id="btn_close_sesion">cerrar sesion</button>
 
     <div id="form_modal">
         <div id="form_content">
