--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>python trade</title>
+    <link rel="stylesheet" href="../static/css/index.css"> 
 </head>
 <body>
     <header>
-        <h1>CREA UNA CUENTA O INICIA SESION</h1>
+        <h1>CREA UNA CUENTA O INICIA SESIÓN</h1>
     </header>
     <main>
         <div>
-            <a href="/login.html">INICIA SESION</a>
+            <a href="/login.html">INICIA SESIÓN</a>
             <a href="/register.html">CREAR CUENTA</a>
-            <button>MIRON</button>
         </div>
     </main>
-    <footer>Hector Yahir Sanchez Martinez</footer>
+    <footer>Héctor Yahir Sánchez Martínez</footer>
 </body>
 </html>
