--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,20 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../static/css/login.css"> 
+    <title>Login</title>
 </head>
 <body>
     <h1>LOGIN</h1>
-        <button id="btn_generate_seller_login">SOY VENDEDOR</button>
-        <button id="btn_generate_user_login">USUARIO</button>
-
-    <div id="login_usr">
-
-    </div>    
-    
-    <div id="login_seller">
-
-    </div>
+    <label>
+        <input type="checkbox" id="is_seller_checkbox">
+        Soy Vendedor
+    </label>
+    <div id="login_form"></div>
     <script src="../static/js/users/login.js"></script>
 </body>
 </html>
