users can now buy all the products in their cart at the same time

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -21,6 +21,7 @@
         <div id="cart_items">
             <h2>Tu Carrito</h2>
             <div id="cart_content"></div>
+            <button id="btn_buy_all">COMPRAR TODO</button>
         </div>
     </div>
 
